--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.2.5",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "es6-promise": "4.1.1",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
