--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-unfetch": "2.0.0",
     "jss": "^9.8.7",
     "next": "^8.0.3",
+    "next-redirect": "^1.0.1",
     "next-redux-saga": "4.0.0",
     "next-redux-wrapper": "2.0.0",
     "react": "^16.8.4",
