--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "es6-promise": "4.1.1",
+    "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "isomorphic-unfetch": "2.0.0",
     "jss": "^9.8.7",
     "next": "^8.0.3",
-    "next-redirect": "^1.0.1",
     "next-redux-saga": "4.0.0",
     "next-redux-wrapper": "2.0.0",
     "react": "^16.8.4",
