--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@material-ui/icons": "^3.0.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "body-parser": "^1.18.3",
     "es6-promise": "4.1.1",
     "express": "^4.16.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "isomorphic-unfetch": "2.0.0",
     "jss": "^9.8.7",
+    "mongoose": "^5.5.2",
     "next": "^8.0.3",
     "next-redux-saga": "4.0.0",
     "next-redux-wrapper": "2.0.0",
