--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "node server/index.js",
     "build": "next build",
+    "now-build": "next build",
     "start": "next start"
   },
   "dependencies": {
