--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "ISC",
   "scripts": {
-    "dev": "node server/index.js",
+    "dev": "next",
     "build": "next build",
     "now-build": "next build",
     "start": "next start"
